[package]
name = "color_scheme_generator"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.83"
clap = { version = "4.5.4", features = ["derive"] }
image = "0.25.1"
rayon = "1.10.0"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
serde_yml = "0.0.5"
shellwords = "1.1.0"
sqlite = "0.36.0"
xdg = "2.5.2"

[package.metadata.docs.rs]
cargo = ["doc", "--bins"]
