[package]
name = "color_scheme_generator"
version = "0.9.0"
edition = "2021"
description = "A Command line utility to quickly and easily create color themes from an image."
license = "GPL-3.0+"
authors = ["nikolaizombie1 <fabio.matos999@gmail.com>"]
license = "GPL-3.0-only"
readme = "README.md"
homepage = "https://github.com/nikolaizombie1/color_scheme_generator"
repository = "https://github.com/nikolaizombie1/color_scheme_generator"
keywords = ["cli","theming","image-analisis","waybar", "sway"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.83"
clap = { version = "4.5.4", features = ["derive"] }
image = "0.25.1"
rayon = "1.10.0"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
serde_yml = "0.0.5"
shellwords = "1.1.0"
sqlite = "0.36.0"
xdg = "2.5.2"

[package.metadata.docs.rs]
cargo = ["doc", "--bins"]
