[package]
name = "color_scheme_generator"
version = "1.0.0"
edition = "2021"
description = "A Command line utility to quickly and easily create color themes from an image."
license = "GPL-3.0+"
authors = ["nikolaizombie1 <fabio.matos999@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/nikolaizombie1/color_scheme_generator"
repository = "https://github.com/nikolaizombie1/color_scheme_generator"
keywords = ["cli","theming","image-analysis","waybar", "sway"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.83"
clap = { version = "4.5.4", features = ["derive"] }
image = "0.25.1"
log = "0.4.22"
rayon = "1.10.0"
regex = "1.11.1"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
serde_yml = "0.0.5"
sqlite = "0.36.0"
stderrlog = "0.6.0"
which = "7.0.0"
xdg = "2.5.2"

[package.metadata.docs.rs]
cargo = ["doc", "--bins"]
